lab/manifests/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: shop
  labels:
    app: api
spec:
  type: ClusterIP
  selector:
    app: api
  ports:
    - name: http
      port: 80
      targetPort: 80
